@@ -1,49 +1,10 @@
-from unittest import TestSuite, makeSuite, main
+import unittest
 import Testing
-import Zope2
-Zope2.startup()
 
 from Products.CMFCore.tests.base.testcase import SecurityTest
 
-class CoreUtilsTests(SecurityTest):
 
-    def _makeSite(self):
-        from AccessControl.Owned import Owned
-        from Products.CMFCore.tests.base.dummy import DummySite
-        from Products.CMFCore.tests.base.dummy import DummyUserFolder
-        from Products.CMFCore.tests.base.dummy import DummyObject
-
-        class _DummyObject(Owned, DummyObject):
-            pass
-
-        site = DummySite('site').__of__(self.root)
-        site._setObject( 'acl_users', DummyUserFolder() )
-        site._setObject('content_dummy', _DummyObject(id='content_dummy'))
-        site._setObject('actions_dummy', _DummyObject(id='actions_dummy'))
-
-        return site
-
-    def test__checkPermission(self):
-        from AccessControl import getSecurityManager
-        from AccessControl.Permission import Permission
-        from Products.CMFCore.utils import _checkPermission
-
-        site = self._makeSite()
-        o = site.actions_dummy
-        Permission('View',(),o).setRoles(('Anonymous',))
-        Permission('WebDAV access',(),o).setRoles(('Authenticated',))
-        Permission('Manage users',(),o).setRoles(('Manager',))
-        eo = site.content_dummy
-        eo._owner = (['acl_users'], 'user_foo')
-        getSecurityManager().addContext(eo)
-        self.failUnless( _checkPermission('View', o) )
-        self.failIf( _checkPermission('WebDAV access', o) )
-        self.failIf( _checkPermission('Manage users', o) )
-
-        eo._proxy_roles = ('Authenticated',)
-        self.failIf( _checkPermission('View', o) )
-        self.failUnless( _checkPermission('WebDAV access', o) )
-        self.failIf( _checkPermission('Manage users', o) )
+class CoreUtilsTests(unittest.TestCase):
 
     def test_normalize(self):
         from Products.CMFCore.utils import normalize
@@ -100,6 +61,57 @@ class CoreUtilsTests(SecurityTest):
             self.assertEqual( contributorsplitter({'Contributors': x}), 
                               ['foo', 'bar', 'baz'] )
 
+
+class CoreUtilsSecurityTests(SecurityTest):
+
+    def _makeSite(self):
+        from AccessControl.Owned import Owned
+        from Products.CMFCore.tests.base.dummy import DummySite
+        from Products.CMFCore.tests.base.dummy import DummyUserFolder
+        from Products.CMFCore.tests.base.dummy import DummyObject
+
+        class _DummyObject(Owned, DummyObject):
+            pass
+
+        site = DummySite('site').__of__(self.root)
+        site._setObject( 'acl_users', DummyUserFolder() )
+        site._setObject('foo_dummy', _DummyObject(id='foo_dummy'))
+        site._setObject('bar_dummy', _DummyObject(id='bar_dummy'))
+
+        return site
+
+    def test__checkPermission(self):
+        from AccessControl import getSecurityManager
+        from AccessControl.ImplPython import ZopeSecurityPolicy
+        from AccessControl.Permission import Permission
+        from AccessControl.SecurityManagement import newSecurityManager
+        from AccessControl.SecurityManager import setSecurityPolicy
+        from Products.CMFCore.utils import _checkPermission
+
+        setSecurityPolicy(ZopeSecurityPolicy())
+        site = self._makeSite()
+        newSecurityManager(None, site.acl_users.user_foo)
+        o = site.bar_dummy
+        Permission('View',(),o).setRoles(('Anonymous',))
+        Permission('WebDAV access',(),o).setRoles(('Authenticated',))
+        Permission('Manage users',(),o).setRoles(('Manager',))
+        eo = site.foo_dummy
+        eo._owner = (['acl_users'], 'all_powerful_Oz')
+        getSecurityManager().addContext(eo)
+        self.failUnless( _checkPermission('View', o) )
+        self.failUnless( _checkPermission('WebDAV access', o) )
+        self.failIf( _checkPermission('Manage users', o) )
+
+        eo._proxy_roles = ('Authenticated',)
+        self.failIf( _checkPermission('View', o) )
+        self.failUnless( _checkPermission('WebDAV access', o) )
+        self.failIf( _checkPermission('Manage users', o) )
+
+        eo._proxy_roles = ('Manager',)
+        self.failIf( _checkPermission('View', o) )
+        self.failIf( _checkPermission('WebDAV access', o) )
+        self.failUnless( _checkPermission('Manage users', o) )
+
     def test_mergedLocalRolesManipulation(self):
         # The _mergedLocalRoles function used to return references to
         # actual local role settings and it was possible to manipulate them
@@ -118,9 +130,10 @@ class CoreUtilsTests(SecurityTest):
 
 
 def test_suite():
-    return TestSuite((
-        makeSuite(CoreUtilsTests),
+    return unittest.TestSuite((
+        unittest.makeSuite(CoreUtilsTests),
+        unittest.makeSuite(CoreUtilsSecurityTests),
         ))
 
 if __name__ == '__main__':
-    main(defaultTest='test_suite')
+    unittest.main(defaultTest='test_suite')
